test/process/error/unassigned-output.bpp
// Example of bpp file
input x, y
  t = x /\ y
  q = x + t
  p = q - 4v
output z, p, u
